--- a/images/chieu-cay-dai-loan-vien-da18/config.ini
+++ b/images/chieu-cay-dai-loan-vien-da18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-dai-loan-vien-da18.html
 lastopen = 2024-06-09 21:45:17
 
 [search]
-lastsearch = 2024-07-26 05:22:23
+lastsearch = 2024-07-26 06:29:02
 
 [www.diepxuan.com]
 match = 35.7%%
@@ -27,9 +27,9 @@ title = Tượng nữ thần bằng đá 18 - Đá mỹ nghệ Ninh Bình
 url = https://ninhbinhstone.com/tuo-ng-nu-tha-n-ba-ng-da-18
 
 [www.facebook.com]
-match = 22.2%%
-title = Viện Thẩm Mỹ Quốc Tế Hoa Kỳ
-url = https://www.facebook.com/photo/?fbid=457009793851859&set=pcb.457009990518506
+match = -9.1%%
+title = 60 PHÚT COMBO FULLFACE
+url = https://www.facebook.com/PKCKDL.VTMQTHOAKY/photos/60-phút-combo-fullface-định-hình-và-căn-chỉnh-khung-mặt-tự-nhiên-không-phẫu-thuậ/458346137051558/
 
 [nhua66a.com]
 match = -17.9%%
