--- a/images/chieu-dieu-hoa-khong-goi-cao-su-18/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-cao-su-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-cao-su-18.html
 lastopen = 2024-06-10 00:19:48
 
 [search]
-lastsearch = 2024-07-26 02:39:22
+lastsearch = 2024-07-26 06:38:48
 
 [demxanh.com]
 match = 38.2%%
@@ -97,9 +97,9 @@ title = Chiếu Điều Hòa Goni - Ưu Đãi Tháng 07/2024
 url = https://goni.vn/chieu-dieu-hoa-goni/
 
 [www.lazada.vn]
-match = 2.9%%
-title = Size 1.8x2m - Chiếu điều hòa tencel từ cao su non êm mát
-url = https://www.lazada.vn/products/size-18x2m-chieu-dieu-hoa-tencel-tu-cao-su-non-em-mat-khong-kem-vo-goi-chat-chon-mau-dang-khoa-79-chieu-dieu-hoa-cao-su-non-chieu-cao-su-chieu-tencel-chieu-mat-mua-he-i786966766.html
+match = 0.0%%
+title = Size 1.8x2m - Chiếu điều hòa tencel mủ cao su non Ben ...
+url = https://www.lazada.vn/products/size-18x2m-chieu-dieu-hoa-tencel-mu-cao-su-non-ben-ben-ko-kem-vo-goi-chieu-cao-su-chieu-dieu-hoa-chieu-cao-su-non-i854756749.html
 
 [ru9.vn]
 match = 8.8%%
