--- a/images/chieu-du-lichvt-22-3m/config.ini
+++ b/images/chieu-du-lichvt-22-3m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-du-lichvt-22-3m.html
 lastopen = 2024-06-09 21:46:25
 
 [search]
-lastsearch = 2024-07-26 01:26:39
+lastsearch = 2024-07-26 06:42:09
 
 [vnexpress.net]
 match = -128.6%%
@@ -18,8 +18,8 @@ url = https://vielimousine.com/tin-tuc/ho-may-park-vung-tau.html
 
 [www.youtube.com]
 match = -114.3%%
-title = Khám Phá Con Đường "Tỷ Đô" Đẹp Nhất Thành Phố Vũng ...
-url = https://www.youtube.com/watch?v=NhZRPUFmsaw
+title = Du Lịch Vũng Tàu 2023: Cập nhật giá vé tham quan mới nhất
+url = https://www.youtube.com/watch?v=St3S4ilkoIY
 
 [liontrip.vn]
 match = -81.0%%
@@ -27,9 +27,9 @@ title = Tất tần tật kinh nghiệm về tour du lịch Vũng Tàu 2022
 url = https://liontrip.vn/tat-tan-tat-kinh-nghiem-ve-tour-du-lich-vung-tau/
 
 [haivan.com]
-match = -81.0%%
-title = Cáp treo Vũng Tàu - đường lên tiên cảnh Hồ Mây Park
-url = https://haivan.com/diem-den/Vung-tau/cap-treo-vung-tau-duong-len-tien-canh-ho-may-park
+match = -85.7%%
+title = Kinh nghiệm du lịch Vũng Tàu cho gia đình - 2 ngày 1 đêm
+url = https://haivan.com/diem-den/Vung-tau/kinh-nghiem-du-lich-vung-tau-cho-gia-dinh-2-ngay-1-dem
 
 [lockernlock.vn]
 match = -71.4%%
@@ -47,8 +47,8 @@ title = Côn Đảo khai mạc đường hoa, khu vui Xuân và ẩm thực ...
 url = https://www.baobariavungtau.com.vn/du-lich/202402/con-dao-khai-mac-duong-hoa-khu-vui-xuan-va-am-thuc-xuan-1003168/index.htm
 
 [www.etrip4u.com]
-match = -71.4%%
-title = Những địa điểm du lịch ở Vũng Tàu siêu đẹp nên biết
+match = -52.4%%
+title = Những địa điểm du lịch ở Vũng Tàu đẹp - Etrip4u
 url = https://www.etrip4u.com/du-lich/mach-ban-nhung-dia-diem-du-lich-o-vung-tau-sieu-dep
 
 [www.gt-rider.com]
