--- a/images/chieu-lac-gam-18/config.ini
+++ b/images/chieu-lac-gam-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-18.html
 lastopen = 2024-06-09 23:47:34
 
 [search]
-lastsearch = 2024-07-26 05:46:14
+lastsearch = 2024-07-26 06:41:29
 
 [www.diepxuan.com]
 match = 22.2%%
@@ -605,4 +605,9 @@ url = https://www.csgt.vn/m/tintuc/19177/DIEM-BAO-NGAY-18/7/2024.html
 match = -106.2%%
 title = Báo Hòa Bình - Co quan ngon luan cua tinh
 url = https://www.baohoabinh.com.vn/
+
+[metruyen.me]
+match = -168.8%%
+title = Tôi Từ Một Chú Gấu Túi Xuyên Thành Diễn Viên Tuyến 18
+url = https://metruyen.me/truyen/toi-tu-mot-chu-gau-tui-xuyen-thanh-dien-vien-tuyen-18/chuong-4
 
