--- a/images/chieu-nhua-thai-binh-08/config.ini
+++ b/images/chieu-nhua-thai-binh-08/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-nhua-thai-binh-08.html
 lastopen = 2024-06-09 23:16:13
 
 [search]
-lastsearch = 2024-07-26 07:58:17
+lastsearch = 2024-07-26 09:52:36
 
 [shopee.vn]
 match = -73.9%%
@@ -19,7 +19,7 @@ url = https://m.facebook.com/61553157173242/
 [tiki.vn]
 match = -21.7%%
 title = Chiếu nhựa thái bình 1m2,m5,1m6,1m8 mầu ngẫu nhiên
-url = https://tiki.vn/chieu-nhua-gap-gon-1m2-1m5-1m6-1m8-mau-ngau-nhien-hang-dep-p193384230.html?spid=193384238
+url = https://tiki.vn/chieu-nhua-gap-gon-1m2-1m5-1m6-1m8-mau-ngau-nhien-hang-dep-p193384230.html?spid=193384253
 
 [trangvangvietnam.com]
 match = 21.7%%
@@ -32,9 +32,9 @@ title = Chiếu Cói ❤️FREESHIP❤️Chiếu Thái Bình In Hoa 0,8/ ...
 url = https://www.lazada.vn/products/chieu-coi-freeshipchieu-thai-binh-in-hoa-081m21m51m61m82m2-i2001525909.html
 
 [www.sendo.vn]
-match = 30.4%%
-title = Chiếu nhựa thái bình 1m x 1m9 - chieu
-url = https://www.sendo.vn/chie-u-nhu-a-tha-i-bi-nh-1m-x-1m9-43896854.html
+match = -34.8%%
+title = Chiếu Nhựa Chung Anh Thái Bình Giá Tốt, Mua Khỏi ...
+url = https://www.sendo.vn/chieu-nhua-chung-anh-thai-binh.htm
 
 [www.facebook.com]
 match = -30.4%%
