--- a/images/man-in-hoa-dep-18/config.ini
+++ b/images/man-in-hoa-dep-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-18.html
 lastopen = 2024-06-10 01:12:42
 
 [search]
-lastsearch = 2024-07-26 06:15:26
+lastsearch = 2024-07-26 09:59:55
 
 [idfpr.illinois.gov]
 match = -170.6%%
@@ -12,14 +12,14 @@ title = Rights and Responsibilities of Association Board Members
 url = https://idfpr.illinois.gov/content/dam/soi/en/web/idfpr/ccico/pdfs/rights-and-responsibilities-of-association-board-members.pdf
 
 [www.reddit.com]
-match = -17.6%%
-title = HOA controlled by builder
-url = https://www.reddit.com/r/HOA/comments/16n0bic/hoa_controlled_by_builder/
+match = -35.3%%
+title = Can HOA come onto my property?
+url = https://www.reddit.com/r/HOA/comments/xqmjl8/can_hoa_come_onto_my_property/
 
 [www.quora.com]
-match = -182.4%%
-title = Can HOA restrict me from working on my car in my driveway?
-url = https://www.quora.com/Can-HOA-restrict-me-from-working-on-my-car-in-my-driveway
+match = -176.5%%
+title = What can I do when a Homeowner's Association pops up in ...
+url = https://www.quora.com/What-can-I-do-when-a-Homeowners-Association-pops-up-in-my-neighborhood-I-purchased-my-home-years-ago-and-I-specifically-wanted-somewhere-that-a-HOA-didnt-exist-Is-my-only-option-to-move-The-rules-have-already-been
 
 [lauragoodsonart.com]
 match = 47.1%%
