--- a/images/tham-ghe-da/config.ini
+++ b/images/tham-ghe-da/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-ghe-da.html
 lastopen = 2024-06-07 00:36:37
 
 [search]
-lastsearch = 2024-07-26 06:29:42
+lastsearch = 2024-07-26 09:54:00
 
 [www.amazon.com]
 match = -309.1%%
@@ -27,9 +27,9 @@ title = BÀN GHẾ ĐÁ SÂN VƯỜN MIỀN BẮC - 0981.488.850
 url = https://ghedamienbac.com/ban-ghe-da-san-vuon/
 
 [noithathoaphat.com]
-match = -309.1%%
-title = Ghế xoay da trưởng phòng - SG903 - Nội Thất Hòa Phát
-url = https://noithathoaphat.com/ghe-da-truong-phong-sg903
+match = -227.3%%
+title = SG920 Ghế xoay da lãnh đạo có thể nghỉ trưa
+url = https://noithathoaphat.com/ghe-da-van-phong-sg920
 
 [dandoxe.com]
 match = -154.5%%
@@ -42,9 +42,9 @@ title = Bọc Ghế Da Cao Cấp - KTF Auto Đà Lạt
 url = https://ktfauto.vn/product/boc-ghe-da-cao-cap/
 
 [redcar.com.vn]
-match = -236.4%%
-title = Bọc ghế da Ford Ranger (da Thái) - RedCar.com
-url = https://redcar.com.vn/san-pham/boc-ghe-da-ford-ranger-da-thai/
+match = -254.5%%
+title = Bọc ghế da ô tô Xpander (da Thái) - RedCar.com
+url = https://redcar.com.vn/san-pham/boc-ghe-da-o-to-xpander-da-thai/
 
 [bocghedaoto.net]
 match = -181.8%%
