--- a/images/bo-bon-mua-chun-chan-182m/config.ini
+++ b/images/bo-bon-mua-chun-chan-182m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-bon-mua-chun-chan-182m.html
 lastopen = 2024-06-07 00:25:46
 
 [search]
-lastsearch = 2024-07-26 05:49:35
+lastsearch = 2024-07-26 11:42:23
 
 [everon.online]
 match = -32.0%%
@@ -19,7 +19,7 @@ url = https://everonchinhhang.vn/products/bo-chan-bon-mua-dong-thoi-gian-ept2408
 [everonvn.com.vn]
 match = 28.0%%
 title = Báo giá chăn 4 mùa Everon
-url = https://everonvn.com.vn/everon/582/chan-bon-mua-everon?srsltid=AfmBOooP7TanuxpsMnw3eMlIV63MXKDAYKteHwqPTXXWaYmkIxI_qkhQ
+url = https://everonvn.com.vn/everon/582/chan-bon-mua-everon
 
 [www.changagoidemeveron.vn]
 match = -8.0%%
@@ -74,7 +74,7 @@ url = https://www.canhociputra.com/ban-can-ho-chung-cu-ciputra/ban-gap-can-ho-4-
 [www.everonvni.vn]
 match = 24.0%%
 title = BỘ CHĂN BỐN MÙA HOA MỘC LAN ESB23022
-url = https://www.everonvni.vn/bo-chan-bon-mua-hoa-moc-lan-esb23022/?srsltid=AfmBOorhwhirTokt_DNfcitlJGTSJFzomq2j51ljmJknTHgkgCIAfoWS
+url = https://www.everonvni.vn/bo-chan-bon-mua-hoa-moc-lan-esb23022/
 
 [format.com.vn]
 match = -100.0%%
