--- a/images/bo-ga-goi-phu-mau-xoa-tin-18/config.ini
+++ b/images/bo-ga-goi-phu-mau-xoa-tin-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-phu-mau-xoa-tin-18.html
 lastopen = 2024-06-09 23:46:35
 
 [search]
-lastsearch = 2024-07-26 02:37:58
+lastsearch = 2024-07-26 11:47:49
 
 [www.diepxuan.com]
 match = 3.6%%
@@ -205,4 +205,9 @@ url = https://elambo.vn/bo-chan-ga-goi-mau-trang/
 match = 10.7%%
 title = Chăn ga gối Sông Hồng Urban mã mầu UC09
 url = https://demhong.vn/chan-ga-goi-song-hong-uc-09/
+
+[bochangagoi.vn]
+match = -18.8%%
+title = Chăn ga gối HQ18
+url = https://bochangagoi.vn/bo-chan-ga-goi-hq18/
 
