--- a/images/chieu-cay-cao-bang-a-15/config.ini
+++ b/images/chieu-cay-cao-bang-a-15/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chieu-cay-cao-bang-a-15.html
 lastopen = 2024-06-09 22:30:31
 
 [search]
-lastsearch = 2024-07-26 09:50:34
+lastsearch = 2024-07-26 11:46:50
 
 [demxanh.com]
 match = -39.1%%
 title = Bảng giá chiếu trúc Cao Bằng Tây Bắc mới nhất 2021
-url = https://demxanh.com/bang-gia-chieu-truc-cao-bang-tay-bac-moi-nhat-2019.html?srsltid=AfmBOorVsD8h_im5CdwiMTwOxODJpb2iA8pHvcHe2sVxQbuZD2Lv_bHd
+url = https://demxanh.com/bang-gia-chieu-truc-cao-bang-tay-bac-moi-nhat-2019.html
 
 [www.diepxuan.com]
 match = 21.7%%
 title = Chiếu cây Cao Bằng A 160x200 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-cay-cao-bang-a-160x200.html?srsltid=AfmBOoqt4Cu7KcLQDMy9b1gxPCNRQVlv4YbFMZQeHFUYZEbv4gefMLnn
+url = https://www.diepxuan.com/chieu-cay-cao-bang-a-160x200.html
 
 [uannga.vn]
 match = 56.5%%
