--- a/images/chieu-dieu-hoa-khong-goi-12/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-12/config.ini
@@ -7,9 +7,9 @@ lastopen = 2024-06-09 23:15:39
 lastsearch = 2024-07-26 11:21:55
 
 [demxanh.com]
-match = 25.9%%
-title = Chiếu điều hòa Nhật Bản NEKIO chính hãng
-url = https://demxanh.com/chieu-dieu-hoa-nhat-ban-nekio-chinh-hang-nhat.html
+match = -14.8%%
+title = Bảng giá chiếu điều hòa cao cấp giá tốt nhất tại ...
+url = https://demxanh.com/chieu-dieu-hoa.html?srsltid=AfmBOooT9m6i7U1G2fV6PlwpJcsp3sWpwXlc4b9FG32OfQfv9thfSVSS
 
 [shopee.vn]
 match = 18.5%%
