--- a/images/chieu-dieu-hoa-khong-goi-re-16/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-re-16/config.ini
@@ -7,14 +7,14 @@ lastopen = 2024-06-09 23:43:24
 lastsearch = 2024-07-26 11:30:24
 
 [demxanh.com]
-match = -3.3%%
-title = Bảng giá chiếu điều hòa cao cấp giá tốt nhất tại ...
-url = https://demxanh.com/chieu-dieu-hoa.html
+match = -10.0%%
+title = Tư vấn mua chiếu điều hòa chính hãng, giá rẻ tại Đệm Xanh
+url = https://demxanh.com/tu-van-mua-chieu-dieu-hoa-chinh-hang-gia-re-tai-dem-xanh.html
 
 [suongtuyet.com]
-match = -13.3%%
-title = Có Mấy Loại Chiếu Điều Hòa? Chiếu Điều Hòa Loại Nào ...
-url = https://suongtuyet.com/nen-su-dung-chieu-dieu-hoa-loai-nao-chieu-dieu-hoa-loai-nao-tot.html
+match = 16.7%%
+title = có nên sử dụng chiếu điều hòa không?
+url = https://suongtuyet.com/chieu-dieu-hoa-co-nen-su-dung-chieu-dieu-hoa-khong.html
 
 [shopee.vn]
 match = 23.3%%
