--- a/images/chieu-du-lich-18/config.ini
+++ b/images/chieu-du-lich-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-du-lich-18.html
 lastopen = 2024-06-09 21:46:31
 
 [search]
-lastsearch = 2024-07-26 04:29:59
+lastsearch = 2024-07-26 11:48:52
 
 [helloviettravel.com]
 match = -181.2%%
@@ -72,9 +72,9 @@ title = Top 18 địa điểm du lịch DakLak nổi tiếng không thể bỏ l
 url = https://mia.vn/cam-nang-du-lich/top-dia-diem-du-lich-daklak-noi-tieng-khong-the-bo-lo-5670
 
 [www.ivivu.com]
-match = -100.0%%
-title = Du lịch New York đừng quên 18 địa danh này
-url = https://www.ivivu.com/blog/2017/09/du-lich-new-york-dung-quen-18-dia-danh-nay/
+match = -187.5%%
+title = Du lịch Phú Yên mê mẩn tại 18 điểm tham quan nổi tiếng
+url = https://www.ivivu.com/blog/2024/05/du-lich-phu-yen-me-man-tai-18-diem-tham-quan-noi-tieng/
 
 [www.dulichxanh.com.vn]
 match = -143.8%%
