--- a/images/nem-sieu-nhe-9f-12/config.ini
+++ b/images/nem-sieu-nhe-9f-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-12.html
 lastopen = 2024-06-10 01:22:00
 
 [search]
-lastsearch = 2024-07-26 05:48:12
+lastsearch = 2024-07-26 11:36:07
 
 [www.lazada.vn]
 match = -111.1%%
@@ -17,19 +17,19 @@ title = NEM-12
 url = https://www.coastpneumatics.com/product/NEM-12/
 
 [m.facebook.com]
-match = -122.2%%
-title = Người Việt Bolsa/Orange County | 🌮NEM CHUA THANH ...
-url = https://m.facebook.com/groups/nguoivietorangecounty/posts/2900660673417630/
+match = -100.0%%
+title = HỆ THỐNG SIÊU THỊ NỆM HÀNG ĐẦU VIỆT NAM TỔNG ...
+url = https://m.facebook.com/media/set/?vanity=vuanem.vn&set=a.693142637496508
 
 [thegioinem.com]
-match = 17.6%%
-title = Bảng Giá Nệm 2024
-url = https://thegioinem.com/bang-gia-nem
+match = -105.6%%
+title = Bảng giá nệm Vạn Thành khuyến mãi mới nhất 2024
+url = https://thegioinem.com/bang-gia-nem-van-thanh-moi.html
 
 [www.facebook.com]
-match = -22.2%%
-title = Tatana - Nệm Drap Gối Cao Cấp
-url = https://www.facebook.com/tatana.vn/
+match = -88.9%%
+title = NEM Fashion - 💥 𝐍𝐄𝐖 𝐘𝐄𝐀𝐑 𝐒𝐀𝐋𝐄 𝟓𝟎%% 💥 𝐓𝐎𝐀̀𝐍 𝐁𝐎̣̂ ...
+url = https://www.facebook.com/nemfashion.official/posts/-𝐍𝐄𝐖-𝐘𝐄𝐀𝐑-𝐒𝐀𝐋𝐄-𝟓𝟎-𝐓𝐎𝐀̀𝐍-𝐁𝐎̣̂-𝐒𝐀̉𝐍-𝐏𝐇𝐀̂̉𝐌-𝐓𝐇𝐔-đ𝐎̂𝐍𝐆với-mong-muốn-mang-tới-một-năm/766864658809567/
 
 [eva.vn]
 match = -150.0%%
@@ -57,9 +57,9 @@ title = NEM Furniture JSC (@nemfurniturejsc)
 url = https://www.instagram.com/nemfurniturejsc/?hl=en
 
 [www.diepxuan.com]
-match = 11.1%%
-title = Điệp Xuân Nệm siêu nhẹ
-url = https://www.diepxuan.com/nem-sieu-nhe.html
+match = -111.1%%
+title = Điệp Xuân Nệm siêu nhẹ 9F 12 - Chăn ga gối đệm Điệp Xuân
+url = https://www.diepxuan.com/nem-sieu-nhe-9f-12.html
 
 [nemphuoclong.vn]
 match = -83.3%%
