--- a/images/vo-goi-om-es1804-80x100/config.ini
+++ b/images/vo-goi-om-es1804-80x100/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-goi-om-es1804-80x100.html
 lastopen = 2024-07-01 14:25:38
 
 [search]
-lastsearch = 2024-07-26 09:55:39
+lastsearch = 2024-07-26 11:48:31
 
 [www.everonqb.com]
 match = 0.0%%
@@ -24,7 +24,7 @@ url = https://everonletrongtan.com/bo-chan-ga-goi-everon-es1804
 [www.diepxuan.com]
 match = 43.5%%
 title = Điệp Xuân Vỏ gối ôm ES1715 80x100
-url = https://www.diepxuan.com/vo-goi-om-es1715-80x100.html?srsltid=AfmBOorDBXTWJDoP1m9hKhfbqA4KeuODkDqytoCHGc0wFykPY6WJRNeg
+url = https://www.diepxuan.com/vo-goi-om-es1715-80x100.html
 
 [forum.cartridgecollectors.org]
 match = -21.7%%
